--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main id="app"></main>
+    <div id="spinner" style="display: none;">Loading...</div>
     <footer></footer>
 </body>
 </html>
