cambios en el css, imagenes del logo original,positivo y negativo

--- a/src/auth/login/login.html
+++ b/src/auth/login/login.html
@@ -9,16 +9,19 @@
 
 <body>
     <div class="container">
+        <img src="../../../assets/img/crudy__zocial.png" alt="">
         <h2>Iniciar sesión</h2>
         <input type="email" id="emailLogin" placeholder="Correo electrónico" required>
         <input type="password" id="passwordLogin" placeholder="Contraseña" required>
-        <button id="loginBtn">Entrar</button>
-        <button id="registerBton">Registrarse</button>
+        <button id="loginBtn"><b>Entrar</b></button>
+        <button id="registerBton"><b>Registrarse</b></button>
         <p id="loginError" class="error"></p>
+        
     </div>
 
-    
-<script type="module" src="./login.js"></script>
+
+
+    <script type="module" src="./login.js"></script>
 
 
 </body>
