--- a/src/auth/register/register.html
+++ b/src/auth/register/register.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container__register">
+        <img src="../../../assets/img/crudy__zocial.png" alt="">
         <h2>Registro de usuario</h2>
         <input type="email" id="email" placeholder="Correo electrónico" required>
         <input type="text" id="firstName" placeholder="Nombres">
@@ -18,7 +19,7 @@
         <input type="text" id="city" placeholder="Ciudad">
         <input type="text" id="phone" placeholder="Teléfono">
         <input type="number" id="age" placeholder="Edad">
-        <button id="registerBtn">Registrarse</button>
+        <button id="registerBtn"><b>Registrarse</b></button>
         <p id="message" class="error"></p>
     </div>
 
