--- a/src/gallery/gallery.html
+++ b/src/gallery/gallery.html
@@ -12,14 +12,14 @@
     <div class="container py-4">
       <h1 class="text-center mb-4">Galería de Fotos</h1>
 
-      <!-- Formulario -->
+      
       <div class="input-group mb-3">
         <input type="text" id="imageUrl" class="form-control" placeholder="Pega la URL de una imagen">
-        <button id="btnAgregar" class="btn btn-outline-primary">Agregar Foto</button>
+        <button id="btnAdd" class="btn btn-outline-primary">Agregar Foto</button>
       </div>
 
-      <!-- Galería -->
-      <div class="row" id="galeria"></div>
+      
+      <div class="row" id="gallery"></div>
     </div>
   </div>
 
