--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -1,4 +1,4 @@
-<main class="bg-light">
+<div class="container ">
         <div class="container py-5">
             <h2 class="mb-4 text-center">My Notes</h2>
 
@@ -14,4 +14,4 @@
         </div>
 
         <script type="module" src="../notes/notes.js"> </script>
-    </main>
+</div>
